# spark-runner

./: .gitignore  CLAUDE.md  PROMPT.md  README.md  agents.md  classification_rules.txt  find_orphan_tasks.py  go.sh  login.py  pyproject.toml  sanitize_existing_files.py  spark_runner.py  sparky_runner.py
spark_runner/: __init__.py  classification.py  cli.py  config.py  credentials.py  decomposition.py  execution.py  goal_generator.py  goals.py  interactive.py  knowledge.py  llm_trace.py  log.py  models.py  observation_routing.py  observations.py  orchestrator.py  placeholders.py  pytest_plugin.py  report.py  results.py  safety.py  screenshots.py  storage.py  summarization.py  trajectory_recorder.py
sparky_runner/: __init__.py  classification.py  cli.py  config.py  credentials.py  decomposition.py  execution.py  goal_generator.py  goals.py  knowledge.py  log.py  models.py  observation_routing.py  observations.py  orchestrator.py  placeholders.py  pytest_plugin.py  report.py  results.py  screenshots.py  summarization.py  trajectory_recorder.py
tests/: conftest.py  test_agent_log.py  test_classification_rules.py  test_cli.py  test_config.py  test_credentials.py  test_decomposition.py  test_execution.py  test_filesystem.py  test_goals_extended.py  test_hints.py  test_interactive.py  test_knowledge.py  test_llm_functions.py  test_llm_trace.py  test_observation_routing.py  test_orchestrator.py  test_parsing.py  test_pure_functions.py  test_pytest_plugin.py  test_report.py  test_results.py  test_run_phase.py  test_safety.py  test_screenshots.py  test_string_building.py
