[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "sparky-runner"
version = "0.1.0"
description = "SparkyAI Browser Automation Runner"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "browser-use>=0.12.1",
    "python-dotenv",
    "click",
    "pyyaml",
]

[tool.setuptools.packages.find]
include = ["sparky_runner*"]

[project.scripts]
sparky-runner = "sparky_runner.cli:cli"

[project.entry-points."pytest11"]
sparky_runner = "sparky_runner.pytest_plugin"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
