[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "spark-runner"
version = "0.1.0"
description = "Spark Runner – Browser Automation"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "browser-use>=0.12.1",
    "python-dotenv",
    "click",
    "pyyaml",
    "prompt_toolkit",
]

[tool.setuptools.packages.find]
include = ["spark_runner*"]

[tool.setuptools.package-data]
spark_runner = ["assets/*.png"]

[project.scripts]
spark-runner = "spark_runner.cli:cli"

[project.entry-points."pytest11"]
spark_runner = "spark_runner.pytest_plugin"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
